sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:11: error: ';' expected but ',' found.
        setValeur(i-j*ecart+ecart), getValeur(i-j*ecart)
                                  ^